Front end update and kafka messaging improvements for the datamin process